--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sebastián Castaño Suárez</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="web/index.css" />
   </head>
   <body>
     <header>
@@ -12,9 +12,9 @@
         <h1>Sebastián Castaño Suárez</h1>
         <nav>
           <ul>
-            <li><a href="cv.html">CV</a></li>
-            <li><a href="certificados.html">Certificados</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="index.html">CV</a></li>
+            <li><a href="web/certificados.html">Certificados</a></li>
+            <li><a href="web/portfolio.html">Portfolio</a></li>
             <li>
               <a href="https://github.com/SebastianCastanoSuarez1">GitHub</a>
             </li>
@@ -268,7 +268,7 @@
             <p>Castellano</p>
           </div>
           <div class="language-item">
-            <img src="../resources/images/ingles.png" alt="Inglés" />
+            <img src="resources/images/ingles.png" alt="Inglés" />
             <p>Inglés</p>
           </div>
         </div>
@@ -295,13 +295,11 @@
             >GitHub</a
           >
           |
-          <a href="../resources/Sebastian_Castaño_Suarez.pdf" target="_blank"
+          <a href="/resources/Sebastian_Castaño_Suarez.pdf" target="_blank"
             >Curriculum</a
           >
         </div>
       </div>
     </footer>
-
-    <script src="script.js"></script>
   </body>
 </html>
