--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -13,7 +13,7 @@
         <h1>Sebastián Castaño Suárez</h1>
         <nav>
           <ul>
-            <li><a href="index.html">CV</a></li>
+            <li><a href="../index.html">CV</a></li>
             <li><a href="certificados.html">Certificados</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li>
