--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Información de perfil -->
       <div class="profile-container">
         <img
-          src="../resources/images/monet.png"
+          src="resources/images/monet.png"
           alt="Foto de Sebastián Castaño Suárez"
           class="profile-image"
         />
@@ -51,7 +51,7 @@
         <h2>Experiencia Laboral</h2>
         <div class="experience-container">
           <img
-            src="../resources/images/nextdigitalhub.png"
+            src="resources/images/nextdigitalhub.png"
             alt="Imagen de experiencia laboral"
             class="experience-image"
           />
@@ -129,11 +129,11 @@
           </button>
           <button
             class="btn"
-            onclick="window.location.href='../resources/Sebastian_Castaño_Suarez.pdf'"
+            onclick="window.location.href='resources/pdf/Sebastian_Castaño_Suarez.pdf'"
           >
             Descargar CV
           </button>
-          <a href="../resources/Sebastian_Castaño_Suarez.pdf" target="_blank">
+          <a href="resources/pdf/Sebastian_Castaño_Suarez.pdf" target="_blank">
             <button class="btn">Ver CV</button>
           </a>
         </div>
@@ -181,15 +181,15 @@
           <div class="software-category">
             <h3>Arte y Diseño</h3>
             <div class="software-item">
-              <img src="../resources/images/java.png" alt="Java" />
+              <img src="resources/images/java.png" alt="Java" />
               <p>Java</p>
             </div>
             <div class="software-item">
-              <img src="../resources/images/python.png" alt="Python" />
+              <img src="resources/images/python.png" alt="Python" />
               <p>Python</p>
             </div>
             <div class="software-item">
-              <img src="../resources/images/kotlin.png" alt="Kotlin" />
+              <img src="resources/images/kotlin.png" alt="Kotlin" />
               <p>Kotlin</p>
             </div>
           </div>
@@ -198,19 +198,19 @@
           <div class="software-category">
             <h3>BBDD</h3>
             <div class="software-item">
-              <img src="../resources/images/mongoDB.png" alt="MongoDB" />
+              <img src="resources/images/mongoDB.png" alt="MongoDB" />
               <p>MongoDB</p>
             </div>
             <div class="software-item">
-              <img src="../resources/images/oracle.png" alt="Oracle" />
+              <img src="resources/images/oracle.png" alt="Oracle" />
               <p>Oracle</p>
             </div>
             <div class="software-item">
-              <img src="../resources/images/sqlite.png" alt="SQLite" />
+              <img src="resources/images/sqlite.png" alt="SQLite" />
               <p>SQLite</p>
             </div>
             <div class="software-item">
-              <img src="../resources/images/mysql.png" alt="MySQL" />
+              <img src="resources/images/mysql.png" alt="MySQL" />
               <p>MySQL</p>
             </div>
           </div>
@@ -219,12 +219,12 @@
           <div class="software-category">
             <h3>Informes</h3>
             <div class="software-item">
-              <img src="../resources/images/powerBi.png" alt="PowerBi" />
+              <img src="resources/images/powerBi.png" alt="PowerBi" />
               <p>PowerBi</p>
             </div>
             <div class="software-item">
               <img
-                src="../resources/images/jaspersoft_studio_icon.png"
+                src="resources/images/jaspersoft_studio_icon.png"
                 alt="Jaspersoft"
               />
               <p>Jaspersoft</p>
@@ -235,19 +235,16 @@
           <div class="software-category">
             <h3>IDs</h3>
             <div class="software-item">
-              <img
-                src="../resources/images/vscode.png"
-                alt="Visual Studio Code"
-              />
+              <img src="resources/images/vscode.png" alt="Visual Studio Code" />
               <p>Visual Studio Code</p>
             </div>
             <div class="software-item">
-              <img src="../resources/images/eclipse.png" alt="Eclipse" />
+              <img src="resources/images/eclipse.png" alt="Eclipse" />
               <p>Eclipse</p>
             </div>
             <div class="software-item">
               <img
-                src="../resources/images/AndroidStudio.png"
+                src="resources/images/AndroidStudio.png"
                 alt="Android Studio"
               />
               <p>Android Studio</p>
@@ -260,11 +257,11 @@
         <h2>Lenguajes</h2>
         <div class="languages-container">
           <div class="language-item">
-            <img src="../resources/images/idiomas.png" alt="Lenguajes" />
+            <img src="resources/images/idiomas.png" alt="Lenguajes" />
             <p>Idiomas</p>
           </div>
           <div class="language-item">
-            <img src="../resources/images/espana.png" alt="Castellano" />
+            <img src="resources/images/espana.png" alt="Castellano" />
             <p>Castellano</p>
           </div>
           <div class="language-item">
