--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
           </button>
           <button
             class="btn"
-            onclick="window.location.href='resources/pdf/Sebastian_Castaño_Suarez.pdf'"
+            onclick="window.location.href='https://www.linkedin.com/in/sebastian-casta%C3%B1o-suarez-1257a42b3/'"
           >
             Descargar CV
           </button>
@@ -283,7 +283,7 @@
         </p>
         <div class="footer-links">
           <a
-            href="https://www.linkedin.com/in/sebastian-castano-suarez-b8a8a8198/"
+            href="https://www.linkedin.com/in/sebastian-casta%C3%B1o-suarez-1257a42b3/"
             target="_blank"
             >LinkedIn</a
           >
