--- a/web/portfolio.html
+++ b/web/portfolio.html
@@ -126,7 +126,7 @@
         </p>
         <div class="footer-links">
           <a
-            href="https://www.linkedin.com/in/sebastian-castano-suarez-b8a8a8198/"
+            href="https://www.linkedin.com/in/sebastian-casta%C3%B1o-suarez-1257a42b3/"
             target="_blank"
             >LinkedIn</a
           >
