--- a/web/certificados.html
+++ b/web/certificados.html
@@ -31,7 +31,7 @@
         <div class="certificate-item">
           <img
             src="../resources/images/DAM_1.jpg"
-            alt="Certificado 1"
+            alt="Dam"
             class="certificate-image"
             onclick="openModal(this)"
           />
@@ -46,7 +46,7 @@
         <div class="certificate-item">
           <img
             src="../resources/images/web.png"
-            alt="Certificado 2"
+            alt="Web"
             class="certificate-image"
             onclick="openModal(this)"
           />
@@ -59,7 +59,7 @@
         <div class="certificate-item">
           <img
             src="../resources/images/bigdata.png"
-            alt="Certificado 3"
+            alt="BigData"
             class="certificate-image"
             onclick="openModal(this)"
           />
@@ -77,7 +77,7 @@
         <div class="certificate-item">
           <img
             src="../resources/images/bachillerato_1.jpg"
-            alt="Certificado 3"
+            alt="Bachillerato"
             class="certificate-image"
             onclick="openModal(this)"
           />
@@ -90,7 +90,7 @@
         <div class="certificate-item">
           <img
             src="../resources/images/Voluntariado_1.jpg"
-            alt="Certificado 3"
+            alt="Voluntariado"
             class="certificate-image"
             onclick="openModal(this)"
           />
@@ -101,6 +101,19 @@
           </p>
         </div>
       </div>
+      <div class="certificate-item">
+        <img
+          src="../resources/images/B2.jpeg"
+          alt="B2"
+          class="certificate-image"
+          onclick="openModal(this)"
+        />
+        <h3>LanguageCert B2</h3>
+        <p>
+          He obtenido el certificado LanguageCert B2, el cual acredita mi capacidad para comunicarme en inglés de manera fluida y efectiva en entornos académicos y profesionales.
+        </p>
+      </div>
+    </div>
     </section>
     <!-- Modal -->
     <div id="imageModal" class="modal">
